--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,21 +2,25 @@
     <string name="app_name">Memory Matcher</string>
     <string name="title_activity_tabbed_game">Memory Matcher</string>
 
-
     <string name="title_grid_tab_one">Grid 1</string>
     <string name="title_grid_tab_two">Grid 2</string>
 
     <string name="action_logout">Logout</string>
-    <string name="default_card_label">1</string>
-
-    <string name="default_score_label">Score: 0</string>
-    <string name="default_highscore_label">High score: 343</string>
-    <string name="default_recordholder_value">by Patrick</string>
+    <string name="action_trigger_win">Trigger Win</string>
+    <string name="action_start_new_game">Start New Game</string>
     <string name="action_reset_highscore">Reset high score</string>
+
+    <string name="default_card_label">1</string>
+    <string name="default_score_label">Score: 0</string>
+    <string name="default_last_score_label">Last game: 0</string>
+    <string name="default_highscore_label">High score: 0</string>
+    <string name="default_recordholder_value">by</string>
+
     <string name="congratulations_text">Congratulations</string>
-    <string name="winning_text_content">You won! Would you like to play again?</string>
+    <string name="winning_text_content">You won! With a score of</string>
+    <string name="winning_text_highscore_content">You also achieved a new high score!</string>
+    <string name="winning_text_play_again_content">. Would you like to play again?</string>
     <string name="play_again">Play again!</string>
     <string name="not_now">Not now</string>
-    <string name="action_trigger_win">Trigger Win</string>
 
 </resources>
